[gd_scene load_steps=4 format=3 uid="uid://ch2lt10leyftb"]

[ext_resource type="Texture2D" uid="uid://cdvo2f6feu585" path="res://Assets/Sprites/UI/ExitTabNOTINUSE.png" id="1_5m5hl"]
[ext_resource type="Script" path="res://Scripts/Bookmark_Exit_button.gd" id="1_54htk"]
[ext_resource type="Texture2D" uid="uid://dt3tdu2ajbc6n" path="res://Assets/Sprites/UI/ExitTabINUSE.png" id="2_ei628"]

[node name="ExitButton" type="Button"]
self_modulate = Color(1, 1, 1, 0)
offset_right = 20.0
offset_bottom = 28.0
script = ExtResource("1_54htk")

[node name="NotInUseTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 20.0
offset_bottom = 30.0
texture = ExtResource("1_5m5hl")
stretch_mode = 2

[node name="InUseTexture" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 20.0
offset_bottom = 30.0
texture = ExtResource("2_ei628")
stretch_mode = 2

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
